fix: add Go my issues endpoint
